# zsh-infinite

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yaml
examples/basic/: theme.yaml
examples/infinite/: theme.yaml
src/: lib.rs  main.rs  modules.rs  zmod.rs
src/assets/scripts/: dev.zsh-theme  dev.zshrc  infinite.zsh-theme
src/assets/scripts/zmod/: boot.sh  cleanup.sh
src/modules/: args.rs  utils.rs  zsh.rs
src/modules/utils/: dev.rs  install.rs  paths.rs  uninstall.rs  update.rs
src/modules/zsh/: daemon.rs  prompt.rs  theme.rs  theme_manager.rs
src/modules/zsh/daemon/: get.rs  server.rs  start.rs  stop.rs
src/modules/zsh/prompt/: left.rs  right.rs  transient.rs
src/modules/zsh/theme/: color_scheme.rs  config_ui.rs  gradient.rs  named_color_serde_option.rs  prompt_theme.rs
zsh-infinite/: theme.yaml
